--- a/output/index.html
+++ b/output/index.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head> 
     <body>
+        <section>
         <header>
             <h1>aggregate-feeds</h1>
         </header>
@@ -15,3 +16,6 @@
             <li><a href="fediverse.xml">fediverse</a></li>
             <li><a href="kemono.xml">kemono</a></li>
         </ul>
+        </section>
+    </body>
+</html>
