--- a/output/index.html
+++ b/output/index.html
@@ -15,7 +15,7 @@
             <li><a href="comic.xml">comic</a></li>
             <li><a href="fediverse.xml">fediverse</a></li>
             <li><a href="kemono.xml">kemono</a></li>
-            <li><a href="nitter.xml">nitter</a></li>
+            <li><a href="twitter.xml">twitter</a></li>
         </ul>
         </section>
     </body>
